# uibk_cpp_lab

./: .clang-format  .editorconfig  README.md
assignment/: README.md  metroidvania_specification.md  rpg_specification.md
cmake-example/: CMakeLists.txt
cmake-example/apps/: myapp.cpp
cmake-example/cmake/: compile_flags.cmake
cmake-example/include/mylib/: foo.hpp
cmake-example/src/: foo.cpp
cmake-example/tests/: foo_test.cpp
exercises/: .gitignore  README.md
exercises/images/: task03_dependencies.dot
exercises/task01/: hello_boost.cpp
exercises/task02/: vec.cpp
exercises/task03/app/: app.cpp
exercises/task03/libBar/: bar.cpp  bar.hpp
exercises/task03/libBaz/: baz.cpp  baz.hpp
exercises/task03/libFoo/: foo.cpp  foo.hpp
exercises/task04/: iterations.cpp
exercises/task05/: strange.cpp
exercises/task16/: plugin.hpp
exercises/task22/: CMakeLists.txt  executable.cpp
exercises/task22/libFoo/: foo.cpp  foo.hpp
topic/game_ai/: notes.md
topic/little_features/: CMakeLists.txt  conversion_operator.cpp  empty_struct.cpp  execution_policy.cpp  object_slicing.cpp  placement_new.cpp  pointer_to_member.cpp
